finish infinite loop

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -8,15 +8,6 @@
     <link rel="stylesheet" href="demo.css"/>
 </head>
 <body>
-<h3>功能列表</h3>
-<ol>
-    <li>响应式</li>
-    <li>方向,触发方法,自动生成</li>
-    <li>data-* 属性配置</li>
-    <li>拖动</li>
-</ol>
-<h3>左右</h3>
-
 <div id="J_Scroll" class="ZScroll">
     <div>
         <a href="#"><img src="img/f1.jpg" alt=""/></a>
@@ -42,28 +33,30 @@
 <script src="jquery.js"></script>
 <script src="../src/ZScroll.js"></script>
 <script>
-    var ele = document.getElementById('J_Scroll');
-    var options = {
-        autoPlay: false,
-        speed: 1000,
-        distance: 1,
-        direction: 0,
-        initialSlide: 0,
-        pauseOnHover: true,
-        vertical: true,
-        infinite: true,
-        smooth: false,
+    $(window).on('load', function (e) {
+        var ele = document.getElementById('J_Scroll');
+        var options = {
+            autoPlay: false,
+            speed: 500,
+            distance: 1,
+            direction: 1,
+            initialSlide: 0,
+            pauseOnHover: true,
+//        vertical: true,
+            infinite: true,
+            smooth: false,
 
-        debug: true,
-    };
-    window._ = new ZScroll(ele, options);
+            debug: true,
+        };
+        window._ = new ZScroll(ele, options);
 
-    J_Scroll_prev.onclick = function () {
-        _.prev();
-    };
-    J_Scroll_next.onclick = function () {
-        _.next();
-    };
+        J_Scroll_prev.onclick = function () {
+            _.prev();
+        };
+        J_Scroll_next.onclick = function () {
+            _.next();
+        };
+    });
 </script>
 </body>
 </html>
