--- a/demo/demo.html
+++ b/demo/demo.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="demo.css"/>
 </head>
 <body>
+<h1>Demo 0</h1>
+<div id="J_Scroll" class="ZScroll">
+    <div>
+        <a href="#"><img src="img/f1.jpg" alt=""/></a>
+    </div>
+    <div>
+        <a href="#"><img src="img/f2.jpg" alt=""/></a>
+    </div>
+</div>
+
 <h1>Demo 1</h1>
 <div id="J_Scroll1" class="ZScroll">
     <div>
@@ -26,6 +36,7 @@
         <a href="#"><img src="img/f5.jpg" alt=""/></a>
     </div>
 </div>
+
 <h1>Demo 2</h1>
 <div id="J_Scroll2" class="ZScroll">
     <div>
@@ -44,6 +55,7 @@
         <a href="#"><img src="img/f5.jpg" alt=""/></a>
     </div>
 </div>
+
 <h1>Demo 3</h1>
 <div id="J_Scroll3" class="ZScroll">
     <div>
@@ -67,6 +79,19 @@
 <script src="../src/ZScroll.js"></script>
 <script>
     $(window).on('load', function (e) {
+        $('#J_Scroll').zScroll({
+            autoPlay: true,
+            autoPlaySpeed: 20,
+            speed: 20,
+            sleep: 0,
+            distance: 1,
+            direction: 1,
+            initialSlide: 0,
+            pauseOnHover: true,
+            infinite: true,
+            smooth: true,
+            debug: true
+        });
         $('#J_Scroll1').zScroll({
             autoPlay: true,
             autoPlaySpeed: 20,
